--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,6 +60,7 @@ table {
 body {
 	/*background: url('http://onedesigncompany.com/images/bg-blk.jpg');*/
 	background:url('site-background.jpg');
+	min-height: 100%;
 }
 
 section {
@@ -264,6 +265,21 @@ nav ul {
 	left: 0%;
 	z-index: -5;
 	color:#d3d3d3 !important;
+	min-height: 100%;
+}
+
+.lessons h2 {
+	color:black;
+}
+
+.lessons a {
+	color:white;
+	font-family: sans-serif;
+	font-size: 14px;
+}
+
+.lessons a:hover {
+	color:black;
 }
 
 /*FAQ*/
@@ -763,7 +779,7 @@ nav ul {
 }
 
 .localclonedivs h3 {
-	margin-top: 20px;
+	margin-top: 50px;
 	padding-bottom: 15px;
 }
 
@@ -781,6 +797,12 @@ nav ul {
 	margin-top: 30px;
 	text-align: left;
 	margin-bottom: 35px;
+}
+
+.cloneimg img {
+	width:30%;
+	border-radius: 5px;
+	margin-top: 20px;
 }
 
 /*LESSON 5*/
