--- a/stylesheet.css
+++ b/stylesheet.css
@@ -219,6 +219,7 @@ nav ul {
 	margin-top:20px;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: bold;
+	color:#d3d3d3;
 }
 
 .lessonsummary .lessonexplain p {
@@ -227,6 +228,7 @@ nav ul {
 	margin-top: 20px;
 	width:85%;
 	margin-left: 10px;
+	color:#d3d3d3;
 }
 
 .lessonsummary {
@@ -248,11 +250,11 @@ nav ul {
 
 .l3 a {
 	text-decoration: none;
-	color:black;
+	color:#d3d3d3;
 }
 
 .l3 a:hover {
-	color:#dddddd;
+	color:black;
 	-webkit-transition: all 0.5s ease-in 0.5s;
 	-moz-transition: all 0.5s ease-in 0.5s;
 	-o-transition: all 0.5s ease-in 0.5s;
