--- a/stylesheet.css
+++ b/stylesheet.css
@@ -768,12 +768,13 @@ nav ul {
 }
 
 .localclonedivs {
-	width:60%;
+	width:66%;
 	text-align: left;
 	background-color: rgba(0,0,0,0.3);
 	height:250px;
 	display: inline-block;
 	border-radius: 5px;
+	margin-top: 10px;
 }
 
 .localclonedivs a {
@@ -806,9 +807,8 @@ nav ul {
 .cloneimg img {
 	width:30%;
 	border-radius: 5px;
-	margin-top: 20px;
-	position: relative;
-	top:35px;
+	margin-top: 10px;
+	float:right;
 }
 
 .cloneterminal {
@@ -816,7 +816,7 @@ nav ul {
 	width:50% !important;
 	background-color:rgba(0,0,0,0.8);
 	border-radius: 5px;
-	margin-top: 20px;
+	margin-top: 25px;
 }
 
 .cloneterminal p {
