--- a/stylesheet.css
+++ b/stylesheet.css
@@ -993,12 +993,12 @@ nav ul {
 }
 
 .gitpushdivs {
-	width:100%;
+	width:60%;
 	text-align: left;
 	background-color: rgba(0,0,0,0.3);
-	height:250px;
+	height:200px;
 	display: inline-block;
-	border-radius: 5px;
+	border-radius: 5px;	
 }
 
 .gitpushdivs a {
@@ -1008,7 +1008,7 @@ nav ul {
 }
 
 .gitpushdivs h3 {
-	margin-top: 20px;
+	margin-top: 75px;
 	padding-bottom: 15px;
 }
 
@@ -1016,7 +1016,7 @@ nav ul {
 	text-align: center;
 	margin: 0 auto;
 	padding: 0;
-	width: 70%;
+	width: 80%;
 	padding-bottom: 20px;
 	display: inline-block;
 	margin-left: 60px;
@@ -1026,6 +1026,14 @@ nav ul {
 	margin-top: 30px;
 	text-align: left;
 	margin-bottom: 35px;
+}
+
+.commandslist {
+	display: inline-block;
+	width: 35%;
+	background-color: rgba(0,0,0,0.4);
+	border-radius: 5px;
+	padding:10px 0;
 }
 
 /*FOOTER*/
