Removed issue with words not in correct location

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1077,11 +1077,27 @@ nav ul {
     height:20px;
 }
 
-
-
-
 /*RESPONSIVE DESIGN*/
 
+@media screen and (max-width: 1140px) {
+	section {
+		width:900px;
+		margin: 0 auto;
+	}
+	header {
+		text-align: center;
+	}
+	.header h3 {
+		display: none;
+	}
+	nav .navulparameter {
+		right:20%;
+		padding-top: 20px;
+	}
+	.back-to-top {
+		display: none;
+	}
+}
 
 
 
