--- a/stylesheet.css
+++ b/stylesheet.css
@@ -610,7 +610,7 @@ nav ul {
 	/*display: inline-block;*/
 	padding:7px;
 	border:1px solid black;
-	/*margin-top: 50px;*/
+	margin-top: 85px !important;
 	font-weight:bold;
 	font-size: 24px;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -744,9 +744,8 @@ nav ul {
 /*LESSON 4*/
 
 .lesson4 {
-	top:400%;
+	top:410%;
 	padding-bottom: 30px;
-
 }
 
 .lesson4 h2 {
@@ -757,7 +756,7 @@ nav ul {
 	font-weight:bold;
 	font-size: 24px;
 	font-family: 'Source Sans Pro', sans-serif;
-	margin-top: 50px;
+	margin-top: 85px !important;
 	position: relative;
 	z-index: 0;
 	text-align: center;
@@ -891,7 +890,7 @@ nav ul {
 /*LESSON 5*/
 
 .lesson5 {
-	top:530%;
+	top:535%;
 }
 
 .lesson5 h2 {
@@ -902,7 +901,7 @@ nav ul {
 	font-weight:bold;
 	font-size: 24px;
 	font-family: 'Source Sans Pro', sans-serif;
-	margin-top: 50px;
+	margin-top: 130px !important;
 	position: relative;
 	z-index: 0;
 	text-align: center;
@@ -961,7 +960,7 @@ nav ul {
 /*LESSON 6*/
 
 .lesson6 {
-	top:610%;
+	top:620%;
 }
 
 .lesson6 h2 {
@@ -972,7 +971,7 @@ nav ul {
 	font-weight:bold;
 	font-size: 24px;
 	font-family: 'Source Sans Pro', sans-serif;
-	margin-top: 50px;
+	margin-top: 140px !important;
 	position: relative;
 	z-index: 0;
 	text-align: center;
@@ -1040,7 +1039,7 @@ nav ul {
 
 .contact a{
     position:absolute;
-    top:680%;
+    top:720%;
     left:15%;
     background-color: rgb(121,25,6);
     border-radius:5px;
@@ -1055,7 +1054,7 @@ nav ul {
 
 .contact p{
     position:absolute;
-    top:680%;
+    top:720%;
     left:70%;
     background-color: #2c3747;
     border-radius:5px;
@@ -1066,7 +1065,7 @@ nav ul {
 .gitbutton{
     position:absolute;
     left:40%;
-    top:680%;
+    top:720%;
     background-color: #2c3747;
     border-radius: 5px;
     font-weight: bold;
